Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-1307

serialize_subtree fails serializing namespaces in special occassions when libxml2 is used as the parser

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • None
    • xml/om
    • None
    • Linux + windows

    Description

      Falils in serializing loginOp in the following xml

      <v:Envelope

      xmlns:i="http://www.w3.org/1999/XMLSchema-instance" xmlns:d="http://www.w3.org/1999/XMLSchema" xmlns:c="http://schemas.xmlsoap.org/soap/encoding/" xmlns:v="http://schemas.xmlsoap.org/soap/envelope/">
      <v:Header />
      <v:Body>
      <n0:loginOp id="o0" c:root="1" xmlns:n0="http://ws.apache.org/axis2/php/math">
      <username i:type="d:string">wfg</username>
      <password i:type="d:string">Ert</password>
      </n0:loginOp>
      </v:Body>
      </v:Envelope>

      It gives
      <n0:loginOp c:root="1" id="o0" xmlns:n0="http://ws.apache.org/axis2/php/math" xmlns:c="http://schemas.xmlsoap.org/soap/encoding/">
      <username i:type="d:string" xmlns:i="http://www.w3.org/1999/XMLSchema-instance">wfg</username>
      <password i:type="d:string">Ert</password>
      </n0:loginOp>

      Note that 'password' element i:type attribute doesn't have a namespace declared..

      Attachments

        Activity

          People

            dimuthu Dimuthu Gamage
            dimuthu Dimuthu Gamage
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: