Fixing https://issues.apache.org/jira/browse/AXIS2C-1307, serializing sub tree fails when the namespace is from a parent in special occassions